2005-04-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c: shorter dialog title.

2005-04-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptemplateeditor.c: s/Colorspace/Color space/

2005-04-05  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/Makefile.am
	* app/dialogs/info-window.[ch]: removed.

	* app/actions/view-actions.c
	* app/actions/view-commands.[ch]
	* menus/image-menu.xml.in: removed its action and menu stuff.

	* app/display/gimpdisplayshell-cursor.c
	* app/display/gimpdisplayshell-title.c
	* app/display/gimpdisplayshell.[ch]: removed info window stuff.
	This was the last display -> dialogs dependency.

	* app/dialogs/dialogs.c: added ugly hack that references
	info_dialog. Otherwise the still existing tools -> dialogs
	dependency breaks the build.

2005-04-05  Sven Neumann  <sven@gimp.org>

	* app/core/core-enums.[ch]
	* app/core/gimpimage.c
	(gimp_image_remove_layer, gimp_image_remove_channel): handle a
	floating selection attached to the layer or channel that is being
	removed.  Fixes bug #168582 but doesn't handle floating selections
	attached to layer masks.

2005-04-05  Sven Neumann  <sven@gimp.org>

	* configure.in: renamed localedir to gimplocaledir.

	* libgimpbase/Makefile.am (AM_CPPFLAGS)
	* tools/Makefile.am (AM_CPPFLAGS): changed accordingly.

	* gimp.pc.in: added gimplocaledir to the pkg-config file to give
	plug-ins a chance to get gimp_locale_directory() at compile time.

2005-04-05  Sven Neumann  <sven@gimp.org>

	* configure.in: select localedir according to the format of the
	gettext message catalogs. Closes bug #169274 again.

2005-04-05  Michael Natterer  <mitch@gimp.org>

	More unfinished replacement for the info window:

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpimagepropview.[ch]: new widget showing an image's
	size, resolution, mode, memsize etc.

	* app/dialogs/Makefile.am
	* app/dialogs/image-properties-dialog.[ch]: a dialog keeping the
	widget.
