@@ -1,5 +1,12 @@
 2005-04-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/dbbrowser/gimpprocbrowser.c: s/Blurb/Description/
+
+	* plug-ins/dbbrowser/gimpprocview.c: allow to select the menu path
+	label.
+
+2005-04-05  Sven Neumann  <sven@gimp.org>
+
 	* app/dialogs/image-properties-dialog.c: shorter dialog title.
 
 2005-04-05  Sven Neumann  <sven@gimp.org>
